# traffic-data-domain-updater

./: .gitignore  Dockerfile  build-lambda-zip.sh  entrypoint.py  fargate.py  lambda_function.py  pyproject.toml
.github/workflows/: release.yml
ecocounterdomainupdater/: apiclient.py  ecocounterapi.py  fetcher.py  githubapi.py  updater.py
trafficdatadomainupdater/: __init__.py  ecocounterapi.py  githubapi.py  updater.py
