# Traffic Data Domain Updater - Updates the list of counter site domains
# Copyright (C) 2025  Christoph Böhne
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-data-domain-updater"
version = "1.0.0"
dependencies = [
    "requests==2.32.3"
]
description = "A script for searching for eco counter domains and updating the list of known domains"
authors = [
    { name = "Christoph Böhme", email = "christoph@b3e.net" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]

[project.urls]
Homepage = "https://github.com/cboehme/traffic-data-domain-updater"
Repository = "https://github.com/cboehme/traffic-data-domain-updater.git"

[project.scripts]
traffic-data-domain-updater = "trafficdatadomainupdater.updater:main"
