# Traffic Data Domain Updater - Updates the list of counter site domains
# Copyright (C) 2025  Christoph Böhne
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[build-system]
requires = ["setuptools>=77.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-data-domain-updater"
dynamic = ["version"]
dependencies = [
    "requests==2.32.3"
]
description = "A script for searching for eco counter domains and updating the list of known domains"
authors = [
    { name = "Christoph Böhme", email = "christoph@b3e.net" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
]

license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/cboehme/traffic-data-domain-updater"
Repository = "https://github.com/cboehme/traffic-data-domain-updater.git"

[tool.setuptools_scm]
tag_regex = "^release/(?P<version>\\d+\\.\\d+.\\d+)$"
version_file = "version.txt"
fallback_version = "0.0.0-NO-GIT-BASED-VERSIONING"
